@@ -230,7 +230,7 @@ kdump_prefix2netmask() {						   # {{{
 }									   # }}}
 
 #
-# Get the ip= parameter for a given device
+# Get the IPv4 ip= parameter for a given device
 #
 # Parameters:
 #   1) device  device name
@@ -264,6 +264,43 @@ function kdump_ip_config()						   # {{{
     hostname=$(hostname)
 
     echo "ip=$ipaddr:$peeraddr:$gwaddr:$netmask:$hostname:$iface:none"
+}									   # }}}
+
+#
+# Get the IPv6 ip= parameter for a given device
+#
+# Parameters:
+#   1) device  device name
+# Output:
+#   ip configuration string that can be used for the ip= initrd parameter
+function kdump_ip6_config()						   # {{{
+{
+    local iface="$1"
+    local ipaddr peeraddr gwaddr hostname
+    local family cidr rest prefix
+
+    hostname=$(hostname)
+    gwaddr=$(ip -6 route show ::/0 | sed -n 's/.* via \([^ ]*\).*/[\1]/p')
+
+    while read family cidr rest
+    do
+	[ "$family" = "inet6" ] || continue
+
+	ipaddr="${cidr%/*}"
+	prefix="${cidr:${#ipaddr}}"
+	ipaddr="[$ipaddr]$prefix"
+	set -- $rest
+
+        if [ "$1" == "peer" ] ; then
+	    peeraddr="${2%/*}"
+	    prefix="${2:${#peeraddr}}"
+	    peeraddr="[$peeraddr]"
+	else
+	    peeraddr=
+        fi
+
+	echo "ip=$ipaddr:$peeraddr:$gwaddr::$hostname:$iface:none"
+    done < <(ip -6 address show dev "$iface" permanent scope global)
 }									   # }}}
 
 #
