@@ -279,8 +279,8 @@ KDUMPTOOL_FLAGS=""
 ## ServiceRestart:	kdump
 #
 # Network configuration. Use "auto" for auto-detection in initrd, or a string
-# that contains the network device and the mode (dhcp,static), separated by
-# a colon. Example: "eth0:static" or "eth1:dhcp".
+# that contains the network device and the mode (static, dhcp, dhcp6, auto6),
+# separated by a colon. Example: "eth0:static" or "eth1:dhcp".
 #
 # For static configuration, you have to add the configuration to
 # KDUMP_COMMANDLINE_APPEND.
