@@ -1,5 +1,6 @@
 0.8.16
 ------
+  * IPv6 modes for KDUMP_NETCONFIG
   * Support for dracut's systemd module
   * Take framebuffer size into account for calibrate
   * Take constant-size slabs (ACPI and ftrace) into account for calibrate
